--- a/dropwizard-http2/pom.xml
+++ b/dropwizard-http2/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <argLine>-Duser.language=en -Duser.region=US</argLine>
+        <module.name>io.dropwizard.http2</module.name>
     </properties>
 
     <dependencies>
