--- a/dropwizard-archetypes/pom.xml
+++ b/dropwizard-archetypes/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-project</artifactId>
-        <version>2.0.23</version>
+        <version>2.0.24-SNAPSHOT</version>
     </parent>
 
     <properties>
