Adds more robust health checking / scheduling functionality to base Dropwizard framework

--- a/dropwizard-core/pom.xml
+++ b/dropwizard-core/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>dropwizard-lifecycle</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-health</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
         </dependency>
