--- a/dropwizard-bom/pom.xml
+++ b/dropwizard-bom/pom.xml
@@ -152,6 +152,11 @@
                 <artifactId>dropwizard-http2</artifactId>
                 <version>2.1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-health</artifactId>
+                <version>2.1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
