--- a/dropwizard-dependencies/pom.xml
+++ b/dropwizard-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-bom</artifactId>
-        <version>2.0.24</version>
+        <version>2.0.25-SNAPSHOT</version>
         <relativePath>../dropwizard-bom</relativePath>
     </parent>
 
