--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+        <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
         <maven-filtering.version>3.2.0</maven-filtering.version>
         <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
         <maven-help-plugin.version>3.2.0</maven-help-plugin.version>
@@ -288,7 +289,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-enforcer-plugin</artifactId>
-                        <version>1.4.1</version>
+                        <version>${maven-enforcer-plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>enforce-jakarta-apis</id>
