--- a/dropwizard-e2e/src/test/resources/health/config.yml
+++ b/dropwizard-e2e/src/test/resources/health/config.yml
@@ -26,7 +26,7 @@ health:
         failureAttempts: 1
         successAttempts: 1
   responseProvider:
-    type: detailed-json
+    type: json
   responder:
     type: servlet
     cacheControlEnabled: true
