Additional Health functionality & documentation (#4166)
* Corrects contributors list

* Adds health integration to dropwizard-example

* Adds HealthEnvironment & HealthStateListener, to allow listening to health check events

* Adds documentation on health usage

* Adds a HealthStateView construct, and a detailed health servlet to serve that informaton to callers

* Adds documentation on the detailed-json health servlet

* Fixes flaky test

* Aligns imports with project settings

* Adds responder / response provider concepts to decouple from Jetty for health responses

* Removes Jersey responder and simple response provider, and enhance the servlet responder to accept another query param

* Simplifies the HealthStateView logic and classes, and writes tests for DetailedJsonHealthResponseProvider & the corresponding provider factory

* Adds additional flexibility to HealthResponderFactory (via providing HealthEnvironment) and further unit tests of functionality

* Style fix from review feedback

* Adds two implementations of HealthResponse to make the two cases more explicit, and make each a bit more useful

* Moves packages around to avoid clashses with the pre-existing dropwizard-health module

* Moves packages around to avoid clashses with the pre-existing dropwizard-health module

* Refactoring in response to code review feedback

* Core documentation for dropwizard-health

* Refactoring in response to code review feedback

* Adds additional documentation, and changes existing docs to reflect latest code

* Fixes docs style issue

* Adds docs on accessing health data programatically

* Adds upgrade guide from dropwizard-health module

* Removes name from DefaultHealthFactory

* Fix EnvironmentCommand#run()

* Fixes grammatical typo

* Refactors HealthResponseProvider to be way less coupled to specific query parameters

* Changes up names of http/tcp check names in core docs to make the intended usage more clear

--- a/dropwizard-e2e/src/test/resources/health/config.yml
+++ b/dropwizard-e2e/src/test/resources/health/config.yml
@@ -1,4 +1,5 @@
 health:
+  enabled: true
   delayedShutdownHandlerEnabled: false
   initialOverallState: false
   healthChecks:
@@ -24,6 +25,11 @@ health:
         downtimeInterval: 10ms
         failureAttempts: 1
         successAttempts: 1
+  responseProvider:
+    type: json
+  responder:
+    type: servlet
+    cacheControlEnabled: true
 
 server:
   type: simple
