--- a/dropwizard-example/src/test/resources/test-docker-example.yml
+++ b/dropwizard-example/src/test/resources/test-docker-example.yml
@@ -29,3 +29,19 @@ logging:
       archivedFileCount: 7
       maxFileSize: '1MiB'
 
+# Health settings
+health:
+  delayedShutdownHandlerEnabled: true
+  shutdownWaitPeriod: 1s
+  healthChecks:
+    - name: deadlocks
+      type: alive
+    - name: hibernate
+      type: ready
+      critical: true
+    - name: template
+      type: ready
+      critical: true
+      schedule:
+        checkInterval: 1s
+        downtimeInterval: 2s
