Address merge issues

--- a/dropwizard-core/pom.xml
+++ b/dropwizard-core/pom.xml
@@ -124,6 +124,10 @@
             <artifactId>argparse4j</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-security</artifactId>
         </dependency>
