Set baseline to Java 11 and update CI workflows accordingly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,20 +11,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2.4.0
     - name: Set up JDK
-      uses: joschi/setup-jdk@v2.4.0
+      uses: actions/setup-java@v2
       with:
-        java-version: '8'
+        distribution: 'temurin'
+        java-version: '11'
+        cache: 'maven'
         server-id: ossrh
         server-username: CI_DEPLOY_USERNAME
         server-password: CI_DEPLOY_PASSWORD
         gpg-passphrase: GPG_PASSPHRASE
         gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-    - uses: actions/cache@v2.1.7
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ secrets.CACHE_VERSION }}-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-${{ secrets.CACHE_VERSION }}-
     - name: Build and Deploy
       run: ./mvnw -B -V -ntp -DperformRelease=true deploy
       env:
