Include runnable code snippets into docs
Co-authored-by: Jochen Schalanda <jochen@schalanda.name>

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 
         <module>dropwizard-archetypes</module>
         <module>dropwizard-example</module>
+        <module>docs/source/examples</module>
     </modules>
 
     <properties>
