[maven-release-plugin] prepare release v4.0.0-beta.2

--- a/docs/source/examples/getting-started/pom.xml
+++ b/docs/source/examples/getting-started/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>io.dropwizard.documentation</groupId>
         <artifactId>examples-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>4.0.0-beta.2</version>
     </parent>
 
     <artifactId>example-getting-started</artifactId>
@@ -18,7 +17,7 @@
             <dependency>
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-bom</artifactId>
-                <version>4.0.0-SNAPSHOT</version>
+                <version>4.0.0-beta.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -63,10 +62,8 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.example.helloworld.HelloWorldApplication</mainClass>
                                 </transformer>
                             </transformers>
